# diagrams

./: .editorconfig  Makefile  README.md  pyproject.toml
examples/c4/: README.md  diagram.py
examples/simple/: README.md  diagram.py
