[tool.poetry]
name = "arch-diagrams"
version = "0.1.0"
description = ""
authors = ["Kevin Bradwick <kevinbradwick@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
